# myhours

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/myhours/: __init__.py  __main__.py  cli.py  console.py  extract.py  model.py  persist.py  validation.py
tests/: test_extract.py  test_persist.py  test_sheet.xlsx  test_validate_days.py
