[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myhours"
authors = [{ name = "Sander Teunissen", email = "sander.teunissen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = ['openpyxl==3.0.9', 'typer==0.4.0', 'rich==12.0.1', 'pytz']

[project.scripts]
myhours = 'myhours.cli:run'

[project.optional-dependencies]
test = ['pytest', 'nox']
dev = ['pre-commit', 'flake8', 'mypy', 'black']

# TOOL CONFIG

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
follow_imports = "silent"
disallow_incomplete_defs = true
ignore_missing_imports = true
show_column_numbers = true
non_interactive = true
install_types = true
